Prevent [FOIL-layout-squish-regular]to be soooo squished....

--- a/FOIL-UI.css
+++ b/FOIL-UI.css
@@ -494,7 +494,8 @@ body {
         left: 10em;
         margin-left: 3%;
         padding: 30px 300px;
-        height: 100px;
+        height: 65px;
+        width: 500px;
 }
 
 /*****************************************************
